2005-07-12  Mark Wielaard  <mark@klomp.org>

	* javax/swing/text/JTextComponent.java
	(CaretBlinkTimer.actionPerformed): Check that caret != null.
	(CaretBlinkTimer.update): Likewise.

2005-07-12  Mark Wielaard  <mark@klomp.org>

	Reported by Simon Kitching <skitching@apache.org>
	* java/lang/String.java (toCharArray): Return value.clone() when
	count == value.length.

2005-07-12  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

        *  javax/swing/text/html/parser/ParserDelegator.java (gnuParser.getDTD):
        Added comment about 'super'.

2005-07-11  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GdkGraphics2D.c:
	Replace occurrences of malloc with g_malloc and free with g_free.

	* gnu/java/awt/peer/gtk/GtkChoicePeer.java (connectSignals): New method.
	* include/gnu_java_awt_peer_gtk_GtkChoicePeer.h: Regenerate.
	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GdkFontPeer.c: Move
	gdk_threads_enter calls to start of method bodies.  Move
	gdk_threads_leave calls to end of method definitions bodies.
	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GdkGraphics.c: Likewise.
	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GdkGraphics2D.c: Likewise.
	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GdkGraphicsEnvironment.c: Likewise.
	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GdkPixbufDecoder.c: Likewise.
	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GdkRobotPeer.c: Likewise.
	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GdkTextLayout.c: Likewise.
	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GtkButtonPeer.c: Likewise.
	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GtkCanvasPeer.c: Likewise.
	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GtkCheckboxGroupPeer.c: Likewise.
	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GtkCheckboxMenuItemPeer.c: Likewise.
	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GtkCheckboxPeer.c: Likewise.
	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GtkChoicePeer.c: Likewise.